--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/portfolio.loader.js";
       var config = {
-        dataUrl: buildUrl + "/portfolio.data.gz",
-        frameworkUrl: buildUrl + "/portfolio.framework.js.gz",
-        codeUrl: buildUrl + "/portfolio.wasm.gz",
+        dataUrl: buildUrl + "/portfolio.data",
+        frameworkUrl: buildUrl + "/portfolio.framework.js",
+        codeUrl: buildUrl + "/portfolio.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Portfolio",
