Added fully adaptive layout. Layed the base of the portfolio

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "true";
+      const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/portfolio.loader.js";
+      const loaderUrl = buildUrl + "/Prtfolio.loader.js";
       const config = {
-        dataUrl: buildUrl + "/portfolio.data",
-        frameworkUrl: buildUrl + "/portfolio.framework.js",
-        codeUrl: buildUrl + "/portfolio.wasm",
+        dataUrl: buildUrl + "/Prtfolio.data",
+        frameworkUrl: buildUrl + "/Prtfolio.framework.js",
+        codeUrl: buildUrl + "/Prtfolio.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Benjamin Hardy",
         productName: "Portfolio",
         productVersion: "0.1",
       };
