Oops, wrong scene was selected

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Prtfolio.loader.js";
+      const loaderUrl = buildUrl + "/portfolio.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Prtfolio.data",
-        frameworkUrl: buildUrl + "/Prtfolio.framework.js",
-        codeUrl: buildUrl + "/Prtfolio.wasm",
+        dataUrl: buildUrl + "/portfolio.data",
+        frameworkUrl: buildUrl + "/portfolio.framework.js",
+        codeUrl: buildUrl + "/portfolio.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Benjamin Hardy",
         productName: "Portfolio",
