--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "";
+      const hideFullScreenButton = "false";
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/portfolio.loader.js";
       const config = {
