Compression Test Gzip

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "false";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/portfolio.loader.js";
+      const loaderUrl = buildUrl + "/testBuild.loader.js";
       const config = {
-        dataUrl: buildUrl + "/portfolio.data",
-        frameworkUrl: buildUrl + "/portfolio.framework.js",
-        codeUrl: buildUrl + "/portfolio.wasm",
+        dataUrl: buildUrl + "/testBuild.data.gz",
+        frameworkUrl: buildUrl + "/testBuild.framework.js.gz",
+        codeUrl: buildUrl + "/testBuild.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Benjamin Hardy",
         productName: "Portfolio",
